// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu renders links with titleClassName 1`] = `
<div>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <Link
            replace={false}
            to="/router-link"
          >
            Router Link
          </Link>
        </MenuItem>
        <MenuItem>
          <a
            href="/non-router-link"
            target={undefined}
          >
            Non Router Link
          </a>
        </MenuItem>
        <MenuItem>
          <button
            click={[Function]}
          >
            Custom
          </button>
        </MenuItem>
        <MenuItem>
          <a
            href="//external.link"
            target="_blank"
          >
            External Link
          </a>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
  >
    <span
      className="test-title"
    >
      Test
       
      <Icon
        type="down"
      />
    </span>
  </Dropdown>
</div>
`;

exports[`DropdownMenu renders links without titleClassName 1`] = `
<div>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <Link
            replace={false}
            to="/router-link"
          >
            Router Link
          </Link>
        </MenuItem>
        <MenuItem>
          <a
            href="/non-router-link"
            target={undefined}
          >
            Non Router Link
          </a>
        </MenuItem>
        <MenuItem>
          <button
            click={[Function]}
          >
            Custom
          </button>
        </MenuItem>
        <MenuItem>
          <a
            href="//external.link"
            target="_blank"
          >
            External Link
          </a>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
  >
    <span>
      Test
       
      <Icon
        type="down"
      />
    </span>
  </Dropdown>
</div>
`;
